// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Category node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  categories(first: $first, after: $after) {
    nodes {
      ancestors(first: 100) {
        nodes {
          id
        }
      }
      wpChildren: children(first: 100) {
        nodes {
          id
        }
      }
      contentNodes(first: 100) {
        nodes {
          id
          __typename
        }
      }
      count
      databaseId
      description
      id
      link
      name
      wpParent: parent {
        node {
          id
        }
      }
      parentDatabaseId
      parentId
      posts(first: 100) {
        nodes {
          id
        }
      }
      slug
      taxonomy {
        node {
          id
        }
      }
      teamMembers(first: 100) {
        nodes {
          id
        }
      }
      termGroupId
      termTaxonomyId
      uri
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Category node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  category(id: $id, idType: ID, asPreview: true) {
    ancestors(first: 100) {
      nodes {
        id
      }
    }
    wpChildren: children(first: 100) {
      nodes {
        id
      }
    }
    contentNodes(first: 100) {
      nodes {
        id
        __typename
      }
    }
    count
    databaseId
    description
    id
    link
    name
    wpParent: parent {
      node {
        id
      }
    }
    parentDatabaseId
    parentId
    posts(first: 100) {
      nodes {
        id
      }
    }
    slug
    taxonomy {
      node {
        id
      }
    }
    teamMembers(first: 100) {
      nodes {
        id
      }
    }
    termGroupId
    termTaxonomyId
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Category node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  category(id: $id) {
    ancestors(first: 100) {
      nodes {
        id
      }
    }
    wpChildren: children(first: 100) {
      nodes {
        id
      }
    }
    contentNodes(first: 100) {
      nodes {
        id
        __typename
      }
    }
    count
    databaseId
    description
    id
    link
    name
    wpParent: parent {
      node {
        id
      }
    }
    parentDatabaseId
    parentId
    posts(first: 100) {
      nodes {
        id
      }
    }
    slug
    taxonomy {
      node {
        id
      }
    }
    teamMembers(first: 100) {
      nodes {
        id
      }
    }
    termGroupId
    termTaxonomyId
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Comment node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  comments(first: $first, after: $after) {
    nodes {
      agent
      approved
      author {
        node {
          id
          __typename
        }
      }
      authorIp
      commentedOn {
        node {
          id
          __typename
        }
      }
      content
      date
      dateGmt
      id
      karma
      wpParent: parent {
        node {
          id
        }
      }
      parentDatabaseId
      parentId
      replies(first: 100) {
        nodes {
          id
        }
      }
      type
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Comment node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  comment(id: $id, idType: ID, asPreview: true) {
    agent
    approved
    author {
      node {
        id
        __typename
      }
    }
    authorIp
    commentedOn {
      node {
        id
        __typename
      }
    }
    content
    date
    dateGmt
    id
    karma
    wpParent: parent {
      node {
        id
      }
    }
    parentDatabaseId
    parentId
    replies(first: 100) {
      nodes {
        id
      }
    }
    type
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Comment node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  comment(id: $id) {
    agent
    approved
    author {
      node {
        id
        __typename
      }
    }
    authorIp
    commentedOn {
      node {
        id
        __typename
      }
    }
    content
    date
    dateGmt
    id
    karma
    wpParent: parent {
      node {
        id
      }
    }
    parentDatabaseId
    parentId
    replies(first: 100) {
      nodes {
        id
      }
    }
    type
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] ContentType node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  contentTypes(first: $first, after: $after) {
    nodes {
      archivePath
      canExport
      connectedTaxonomies(first: 100) {
        nodes {
          id
        }
      }
      contentNodes(first: 100) {
        nodes {
          id
          __typename
        }
      }
      deleteWithUser
      description
      excludeFromSearch
      graphqlPluralName
      graphqlSingleName
      hasArchive
      hierarchical
      id
      isFrontPage
      isPostsPage
      label
      labels {
        addNew
        addNewItem
        allItems
        archives
        attributes
        editItem
        featuredImage
        filterItemsList
        insertIntoItem
        itemsList
        itemsListNavigation
        menuName
        name
        newItem
        notFound
        notFoundInTrash
        parentItemColon
        removeFeaturedImage
        searchItems
        setFeaturedImage
        singularName
        uploadedToThisItem
        useFeaturedImage
        viewItem
        viewItems
      }
      menuIcon
      menuPosition
      name
      public
      publiclyQueryable
      restBase
      restControllerClass
      showInAdminBar
      showInGraphql
      showInMenu
      showInNavMenus
      showInRest
      showUi
      uri
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] ContentType node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  contentType(id: $id, idType: ID, asPreview: true) {
    archivePath
    canExport
    connectedTaxonomies(first: 100) {
      nodes {
        id
      }
    }
    contentNodes(first: 100) {
      nodes {
        id
        __typename
      }
    }
    deleteWithUser
    description
    excludeFromSearch
    graphqlPluralName
    graphqlSingleName
    hasArchive
    hierarchical
    id
    isFrontPage
    isPostsPage
    label
    labels {
      addNew
      addNewItem
      allItems
      archives
      attributes
      editItem
      featuredImage
      filterItemsList
      insertIntoItem
      itemsList
      itemsListNavigation
      menuName
      name
      newItem
      notFound
      notFoundInTrash
      parentItemColon
      removeFeaturedImage
      searchItems
      setFeaturedImage
      singularName
      uploadedToThisItem
      useFeaturedImage
      viewItem
      viewItems
    }
    menuIcon
    menuPosition
    name
    public
    publiclyQueryable
    restBase
    restControllerClass
    showInAdminBar
    showInGraphql
    showInMenu
    showInNavMenus
    showInRest
    showUi
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] ContentType node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  contentType(id: $id) {
    archivePath
    canExport
    connectedTaxonomies(first: 100) {
      nodes {
        id
      }
    }
    contentNodes(first: 100) {
      nodes {
        id
        __typename
      }
    }
    deleteWithUser
    description
    excludeFromSearch
    graphqlPluralName
    graphqlSingleName
    hasArchive
    hierarchical
    id
    isFrontPage
    isPostsPage
    label
    labels {
      addNew
      addNewItem
      allItems
      archives
      attributes
      editItem
      featuredImage
      filterItemsList
      insertIntoItem
      itemsList
      itemsListNavigation
      menuName
      name
      newItem
      notFound
      notFoundInTrash
      parentItemColon
      removeFeaturedImage
      searchItems
      setFeaturedImage
      singularName
      uploadedToThisItem
      useFeaturedImage
      viewItem
      viewItems
    }
    menuIcon
    menuPosition
    name
    public
    publiclyQueryable
    restBase
    restControllerClass
    showInAdminBar
    showInGraphql
    showInMenu
    showInNavMenus
    showInRest
    showUi
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] MediaItem node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  mediaItems(first: $first, after: $after) {
    nodes {
      altText
      ancestors(first: 100) {
        nodes {
          id
          __typename
        }
      }
      author {
        node {
          id
        }
      }
      authorDatabaseId
      authorId
      caption
      wpChildren: children(first: 100) {
        nodes {
          id
          __typename
        }
      }
      commentStatus
      comments(first: 100) {
        nodes {
          id
        }
      }
      contentType {
        node {
          id
        }
      }
      databaseId
      date
      dateGmt
      description
      desiredSlug
      enclosure
      fileSize
      guid
      id
      lastEditedBy {
        node {
          id
        }
      }
      link
      mediaDetails {
        file
        height
        meta {
          aperture
          camera
          caption
          copyright
          createdTimestamp
          credit
          focalLength
          iso
          keywords
          orientation
          shutterSpeed
          title
        }
        sizes {
          file
          fileSize
          height
          mimeType
          name
          sourceUrl
          width
        }
        width
      }
      mediaItemUrl
      mediaType
      mimeType
      modified
      modifiedGmt
      wpParent: parent {
        node {
          id
          __typename
        }
      }
      parentDatabaseId
      parentId
      sizes
      slug
      sourceUrl
      srcSet
      status
      template {
        templateName
        __typename
      }
      title
      uri
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] MediaItem node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  mediaItem(id: $id, idType: ID, asPreview: true) {
    altText
    ancestors(first: 100) {
      nodes {
        id
        __typename
      }
    }
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    caption
    wpChildren: children(first: 100) {
      nodes {
        id
        __typename
      }
    }
    commentStatus
    comments(first: 100) {
      nodes {
        id
      }
    }
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    description
    desiredSlug
    enclosure
    fileSize
    guid
    id
    lastEditedBy {
      node {
        id
      }
    }
    link
    mediaDetails {
      file
      height
      meta {
        aperture
        camera
        caption
        copyright
        createdTimestamp
        credit
        focalLength
        iso
        keywords
        orientation
        shutterSpeed
        title
      }
      sizes {
        file
        fileSize
        height
        mimeType
        name
        sourceUrl
        width
      }
      width
    }
    mediaItemUrl
    mediaType
    mimeType
    modified
    modifiedGmt
    wpParent: parent {
      node {
        id
        __typename
      }
    }
    parentDatabaseId
    parentId
    sizes
    slug
    sourceUrl
    srcSet
    status
    template {
      templateName
      __typename
    }
    title
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] MediaItem node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  mediaItem(id: $id) {
    altText
    ancestors(first: 100) {
      nodes {
        id
        __typename
      }
    }
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    caption
    wpChildren: children(first: 100) {
      nodes {
        id
        __typename
      }
    }
    commentStatus
    comments(first: 100) {
      nodes {
        id
      }
    }
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    description
    desiredSlug
    enclosure
    fileSize
    guid
    id
    lastEditedBy {
      node {
        id
      }
    }
    link
    mediaDetails {
      file
      height
      meta {
        aperture
        camera
        caption
        copyright
        createdTimestamp
        credit
        focalLength
        iso
        keywords
        orientation
        shutterSpeed
        title
      }
      sizes {
        file
        fileSize
        height
        mimeType
        name
        sourceUrl
        width
      }
      width
    }
    mediaItemUrl
    mediaType
    mimeType
    modified
    modifiedGmt
    wpParent: parent {
      node {
        id
        __typename
      }
    }
    parentDatabaseId
    parentId
    sizes
    slug
    sourceUrl
    srcSet
    status
    template {
      templateName
      __typename
    }
    title
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Menu node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  menus(first: $first, after: $after) {
    nodes {
      count
      databaseId
      id
      locations
      menuItems(first: 100) {
        nodes {
          id
        }
      }
      name
      slug
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Menu node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  menu(id: $id, idType: ID, asPreview: true) {
    count
    databaseId
    id
    locations
    menuItems(first: 100) {
      nodes {
        id
      }
    }
    name
    slug
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Menu node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  menu(id: $id) {
    count
    databaseId
    id
    locations
    menuItems(first: 100) {
      nodes {
        id
      }
    }
    name
    slug
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] MenuItem node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  menuItems(first: $first, after: $after) {
    nodes {
      childItems(first: 100) {
        nodes {
          id
        }
      }
      connectedNode {
        node {
          id
          __typename
        }
      }
      cssClasses
      databaseId
      description
      id
      label
      linkRelationship
      locations
      menu {
        node {
          id
        }
      }
      order
      parentDatabaseId
      parentId
      path
      target
      title
      url
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] MenuItem node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  menuItem(id: $id, idType: ID, asPreview: true) {
    childItems(first: 100) {
      nodes {
        id
      }
    }
    connectedNode {
      node {
        id
        __typename
      }
    }
    cssClasses
    databaseId
    description
    id
    label
    linkRelationship
    locations
    menu {
      node {
        id
      }
    }
    order
    parentDatabaseId
    parentId
    path
    target
    title
    url
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] MenuItem node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  menuItem(id: $id) {
    childItems(first: 100) {
      nodes {
        id
      }
    }
    connectedNode {
      node {
        id
        __typename
      }
    }
    cssClasses
    databaseId
    description
    id
    label
    linkRelationship
    locations
    menu {
      node {
        id
      }
    }
    order
    parentDatabaseId
    parentId
    path
    target
    title
    url
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Page node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  pages(first: $first, after: $after) {
    nodes {
      acfPageFields {
        buttonGroupField
        checkboxField
        colorPickerField
        datePickerField
        dateTimePickerField
        doc {
          __typename
          id
        }
        fieldGroupName
        fileField {
          __typename
          id
        }
        flexibleContentField {
          __typename
          ... on Page_Acfpagefields_FlexibleContentField_FlexLayout1 {
            fieldGroupName
            flexImage {
              __typename
              id
            }
            flexRelationship {
              __typename
              ... on Post {
                id
              }
              ... on Page {
                id
              }
              ... on MediaItem {
                id
              }
              ... on TeamMember {
                id
              }
              ... on Project {
                id
              }
              ... on TypeLimitTest {
                id
              }
              ... on TypeLimit0Test {
                id
              }
              ... on TranslationFilterTest {
                id
              }
            }
            flexRepeater {
              fieldGroupName
              flexRepeaterRelationship {
                __typename
                ... on Post {
                  id
                }
                ... on Page {
                  id
                }
                ... on MediaItem {
                  id
                }
                ... on TeamMember {
                  id
                }
                ... on Project {
                  id
                }
                ... on TypeLimitTest {
                  id
                }
                ... on TypeLimit0Test {
                  id
                }
                ... on TranslationFilterTest {
                  id
                }
              }
              flexRepeaterTitle
            }
            flexTitle
          }
        }
        galleryField {
          __typename
          id
        }
        googleMapField {
          city
          country
          countryShort
          latitude
          longitude
          placeId
          postCode
          state
          stateShort
          streetAddress
          streetName
          streetNumber
          zoom
        }
        groupField {
          fieldGroupName
        }
        imageField {
          __typename
          id
        }
        linkField {
          target
          title
          url
        }
        mov {
          __typename
          id
        }
        mp4 {
          __typename
          id
        }
        oembedField
        pageLinkField {
          __typename
          ... on Post {
            id
          }
          ... on Page {
            id
          }
          ... on MediaItem {
            id
          }
          ... on TeamMember {
            id
          }
          ... on Project {
            id
          }
          ... on TypeLimitTest {
            id
          }
          ... on TypeLimit0Test {
            id
          }
          ... on TranslationFilterTest {
            id
          }
        }
        pdf {
          __typename
          id
        }
        postObjectField {
          __typename
          ... on Post {
            id
          }
          ... on Page {
            id
          }
          ... on MediaItem {
            id
          }
          ... on TeamMember {
            id
          }
          ... on Project {
            id
          }
          ... on TypeLimitTest {
            id
          }
          ... on TypeLimit0Test {
            id
          }
          ... on TranslationFilterTest {
            id
          }
        }
        radioButtonField
        rangeField
        relationshipField {
          __typename
          ... on Post {
            id
          }
          ... on Page {
            id
          }
          ... on MediaItem {
            id
          }
          ... on TeamMember {
            id
          }
          ... on Project {
            id
          }
          ... on TypeLimitTest {
            id
          }
          ... on TypeLimit0Test {
            id
          }
          ... on TranslationFilterTest {
            id
          }
        }
        repeaterField {
          fieldGroupName
          repeaterFlex {
            __typename
            ... on Page_Acfpagefields_repeaterField_RepeaterFlex_RepeaterFlexTitleLayout {
              fieldGroupName
              repeaterFlexTitle
            }
            ... on Page_Acfpagefields_repeaterField_RepeaterFlex_RepeaterFlexRelationshipLayout {
              fieldGroupName
              repeaterFlexRelationship {
                __typename
                ... on Post {
                  id
                }
                ... on Page {
                  id
                }
                ... on MediaItem {
                  id
                }
                ... on TeamMember {
                  id
                }
                ... on Project {
                  id
                }
                ... on TypeLimitTest {
                  id
                }
                ... on TypeLimit0Test {
                  id
                }
                ... on TranslationFilterTest {
                  id
                }
              }
            }
          }
        }
        selectField
        taxonomyField {
          __typename
          ... on Category {
            id
          }
          ... on Tag {
            id
          }
          ... on PostFormat {
            id
          }
        }
        textAreaField
        textField
        timePicker
        trueFalseField
        userField {
          id
        }
        wysiwygEditorField
      }
      ancestors(first: 100) {
        nodes {
          id
          __typename
        }
      }
      author {
        node {
          id
        }
      }
      authorDatabaseId
      authorId
      wpChildren: children(first: 100) {
        nodes {
          id
          __typename
        }
      }
      commentStatus
      comments(first: 100) {
        nodes {
          id
        }
      }
      content
      contentType {
        node {
          id
        }
      }
      databaseId
      date
      dateGmt
      desiredSlug
      featuredImage {
        node {
          __typename
          id
        }
      }
      featuredImageDatabaseId
      featuredImageId
      guid
      id
      isFrontPage
      isPostsPage
      isRevision
      lastEditedBy {
        node {
          id
        }
      }
      link
      menuOrder
      modified
      modifiedGmt
      wpParent: parent {
        node {
          id
          __typename
        }
      }
      parentDatabaseId
      parentId
      slug
      status
      template {
        templateName
        __typename
      }
      title
      uri
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Page node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  page(id: $id, idType: ID, asPreview: true) {
    acfPageFields {
      buttonGroupField
      checkboxField
      colorPickerField
      datePickerField
      dateTimePickerField
      doc {
        __typename
        id
      }
      fieldGroupName
      fileField {
        __typename
        id
      }
      flexibleContentField {
        __typename
        ... on Page_Acfpagefields_FlexibleContentField_FlexLayout1 {
          fieldGroupName
          flexImage {
            __typename
            id
          }
          flexRelationship {
            __typename
            ... on Post {
              id
            }
            ... on Page {
              id
            }
            ... on MediaItem {
              id
            }
            ... on TeamMember {
              id
            }
            ... on Project {
              id
            }
            ... on TypeLimitTest {
              id
            }
            ... on TypeLimit0Test {
              id
            }
            ... on TranslationFilterTest {
              id
            }
          }
          flexRepeater {
            fieldGroupName
            flexRepeaterRelationship {
              __typename
              ... on Post {
                id
              }
              ... on Page {
                id
              }
              ... on MediaItem {
                id
              }
              ... on TeamMember {
                id
              }
              ... on Project {
                id
              }
              ... on TypeLimitTest {
                id
              }
              ... on TypeLimit0Test {
                id
              }
              ... on TranslationFilterTest {
                id
              }
            }
            flexRepeaterTitle
          }
          flexTitle
        }
      }
      galleryField {
        __typename
        id
      }
      googleMapField {
        city
        country
        countryShort
        latitude
        longitude
        placeId
        postCode
        state
        stateShort
        streetAddress
        streetName
        streetNumber
        zoom
      }
      groupField {
        fieldGroupName
      }
      imageField {
        __typename
        id
      }
      linkField {
        target
        title
        url
      }
      mov {
        __typename
        id
      }
      mp4 {
        __typename
        id
      }
      oembedField
      pageLinkField {
        __typename
        ... on Post {
          id
        }
        ... on Page {
          id
        }
        ... on MediaItem {
          id
        }
        ... on TeamMember {
          id
        }
        ... on Project {
          id
        }
        ... on TypeLimitTest {
          id
        }
        ... on TypeLimit0Test {
          id
        }
        ... on TranslationFilterTest {
          id
        }
      }
      pdf {
        __typename
        id
      }
      postObjectField {
        __typename
        ... on Post {
          id
        }
        ... on Page {
          id
        }
        ... on MediaItem {
          id
        }
        ... on TeamMember {
          id
        }
        ... on Project {
          id
        }
        ... on TypeLimitTest {
          id
        }
        ... on TypeLimit0Test {
          id
        }
        ... on TranslationFilterTest {
          id
        }
      }
      radioButtonField
      rangeField
      relationshipField {
        __typename
        ... on Post {
          id
        }
        ... on Page {
          id
        }
        ... on MediaItem {
          id
        }
        ... on TeamMember {
          id
        }
        ... on Project {
          id
        }
        ... on TypeLimitTest {
          id
        }
        ... on TypeLimit0Test {
          id
        }
        ... on TranslationFilterTest {
          id
        }
      }
      repeaterField {
        fieldGroupName
        repeaterFlex {
          __typename
          ... on Page_Acfpagefields_repeaterField_RepeaterFlex_RepeaterFlexTitleLayout {
            fieldGroupName
            repeaterFlexTitle
          }
          ... on Page_Acfpagefields_repeaterField_RepeaterFlex_RepeaterFlexRelationshipLayout {
            fieldGroupName
            repeaterFlexRelationship {
              __typename
              ... on Post {
                id
              }
              ... on Page {
                id
              }
              ... on MediaItem {
                id
              }
              ... on TeamMember {
                id
              }
              ... on Project {
                id
              }
              ... on TypeLimitTest {
                id
              }
              ... on TypeLimit0Test {
                id
              }
              ... on TranslationFilterTest {
                id
              }
            }
          }
        }
      }
      selectField
      taxonomyField {
        __typename
        ... on Category {
          id
        }
        ... on Tag {
          id
        }
        ... on PostFormat {
          id
        }
      }
      textAreaField
      textField
      timePicker
      trueFalseField
      userField {
        id
      }
      wysiwygEditorField
    }
    ancestors(first: 100) {
      nodes {
        id
        __typename
      }
    }
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    wpChildren: children(first: 100) {
      nodes {
        id
        __typename
      }
    }
    commentStatus
    comments(first: 100) {
      nodes {
        id
      }
    }
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    isFrontPage
    isPostsPage
    isRevision
    lastEditedBy {
      node {
        id
      }
    }
    link
    menuOrder
    modified
    modifiedGmt
    wpParent: parent {
      node {
        id
        __typename
      }
    }
    parentDatabaseId
    parentId
    slug
    status
    template {
      templateName
      __typename
    }
    title
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Page node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  page(id: $id) {
    acfPageFields {
      buttonGroupField
      checkboxField
      colorPickerField
      datePickerField
      dateTimePickerField
      doc {
        __typename
        id
      }
      fieldGroupName
      fileField {
        __typename
        id
      }
      flexibleContentField {
        __typename
        ... on Page_Acfpagefields_FlexibleContentField_FlexLayout1 {
          fieldGroupName
          flexImage {
            __typename
            id
          }
          flexRelationship {
            __typename
            ... on Post {
              id
            }
            ... on Page {
              id
            }
            ... on MediaItem {
              id
            }
            ... on TeamMember {
              id
            }
            ... on Project {
              id
            }
            ... on TypeLimitTest {
              id
            }
            ... on TypeLimit0Test {
              id
            }
            ... on TranslationFilterTest {
              id
            }
          }
          flexRepeater {
            fieldGroupName
            flexRepeaterRelationship {
              __typename
              ... on Post {
                id
              }
              ... on Page {
                id
              }
              ... on MediaItem {
                id
              }
              ... on TeamMember {
                id
              }
              ... on Project {
                id
              }
              ... on TypeLimitTest {
                id
              }
              ... on TypeLimit0Test {
                id
              }
              ... on TranslationFilterTest {
                id
              }
            }
            flexRepeaterTitle
          }
          flexTitle
        }
      }
      galleryField {
        __typename
        id
      }
      googleMapField {
        city
        country
        countryShort
        latitude
        longitude
        placeId
        postCode
        state
        stateShort
        streetAddress
        streetName
        streetNumber
        zoom
      }
      groupField {
        fieldGroupName
      }
      imageField {
        __typename
        id
      }
      linkField {
        target
        title
        url
      }
      mov {
        __typename
        id
      }
      mp4 {
        __typename
        id
      }
      oembedField
      pageLinkField {
        __typename
        ... on Post {
          id
        }
        ... on Page {
          id
        }
        ... on MediaItem {
          id
        }
        ... on TeamMember {
          id
        }
        ... on Project {
          id
        }
        ... on TypeLimitTest {
          id
        }
        ... on TypeLimit0Test {
          id
        }
        ... on TranslationFilterTest {
          id
        }
      }
      pdf {
        __typename
        id
      }
      postObjectField {
        __typename
        ... on Post {
          id
        }
        ... on Page {
          id
        }
        ... on MediaItem {
          id
        }
        ... on TeamMember {
          id
        }
        ... on Project {
          id
        }
        ... on TypeLimitTest {
          id
        }
        ... on TypeLimit0Test {
          id
        }
        ... on TranslationFilterTest {
          id
        }
      }
      radioButtonField
      rangeField
      relationshipField {
        __typename
        ... on Post {
          id
        }
        ... on Page {
          id
        }
        ... on MediaItem {
          id
        }
        ... on TeamMember {
          id
        }
        ... on Project {
          id
        }
        ... on TypeLimitTest {
          id
        }
        ... on TypeLimit0Test {
          id
        }
        ... on TranslationFilterTest {
          id
        }
      }
      repeaterField {
        fieldGroupName
        repeaterFlex {
          __typename
          ... on Page_Acfpagefields_repeaterField_RepeaterFlex_RepeaterFlexTitleLayout {
            fieldGroupName
            repeaterFlexTitle
          }
          ... on Page_Acfpagefields_repeaterField_RepeaterFlex_RepeaterFlexRelationshipLayout {
            fieldGroupName
            repeaterFlexRelationship {
              __typename
              ... on Post {
                id
              }
              ... on Page {
                id
              }
              ... on MediaItem {
                id
              }
              ... on TeamMember {
                id
              }
              ... on Project {
                id
              }
              ... on TypeLimitTest {
                id
              }
              ... on TypeLimit0Test {
                id
              }
              ... on TranslationFilterTest {
                id
              }
            }
          }
        }
      }
      selectField
      taxonomyField {
        __typename
        ... on Category {
          id
        }
        ... on Tag {
          id
        }
        ... on PostFormat {
          id
        }
      }
      textAreaField
      textField
      timePicker
      trueFalseField
      userField {
        id
      }
      wysiwygEditorField
    }
    ancestors(first: 100) {
      nodes {
        id
        __typename
      }
    }
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    wpChildren: children(first: 100) {
      nodes {
        id
        __typename
      }
    }
    commentStatus
    comments(first: 100) {
      nodes {
        id
      }
    }
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    isFrontPage
    isPostsPage
    isRevision
    lastEditedBy {
      node {
        id
      }
    }
    link
    menuOrder
    modified
    modifiedGmt
    wpParent: parent {
      node {
        id
        __typename
      }
    }
    parentDatabaseId
    parentId
    slug
    status
    template {
      templateName
      __typename
    }
    title
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Post node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  posts(first: $first, after: $after) {
    nodes {
      author {
        node {
          id
        }
      }
      authorDatabaseId
      authorId
      categories(first: 100) {
        nodes {
          id
        }
      }
      commentStatus
      comments(first: 100) {
        nodes {
          id
        }
      }
      content
      contentType {
        node {
          id
        }
      }
      databaseId
      date
      dateGmt
      desiredSlug
      enclosure
      excerpt
      featuredImage {
        node {
          __typename
          id
        }
      }
      featuredImageDatabaseId
      featuredImageId
      guid
      id
      isRevision
      isSticky
      lastEditedBy {
        node {
          id
        }
      }
      link
      modified
      modifiedGmt
      pingStatus
      pinged
      postFormats(first: 100) {
        nodes {
          id
        }
      }
      slug
      status
      tags(first: 100) {
        nodes {
          id
        }
      }
      template {
        templateName
        __typename
      }
      terms(first: 100) {
        nodes {
          id
          __typename
        }
      }
      title
      toPing
      uri
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Post node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  post(id: $id, idType: ID, asPreview: true) {
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    categories(first: 100) {
      nodes {
        id
      }
    }
    commentStatus
    comments(first: 100) {
      nodes {
        id
      }
    }
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    enclosure
    excerpt
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    isRevision
    isSticky
    lastEditedBy {
      node {
        id
      }
    }
    link
    modified
    modifiedGmt
    pingStatus
    pinged
    postFormats(first: 100) {
      nodes {
        id
      }
    }
    slug
    status
    tags(first: 100) {
      nodes {
        id
      }
    }
    template {
      templateName
      __typename
    }
    terms(first: 100) {
      nodes {
        id
        __typename
      }
    }
    title
    toPing
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Post node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  post(id: $id) {
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    categories(first: 100) {
      nodes {
        id
      }
    }
    commentStatus
    comments(first: 100) {
      nodes {
        id
      }
    }
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    enclosure
    excerpt
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    isRevision
    isSticky
    lastEditedBy {
      node {
        id
      }
    }
    link
    modified
    modifiedGmt
    pingStatus
    pinged
    postFormats(first: 100) {
      nodes {
        id
      }
    }
    slug
    status
    tags(first: 100) {
      nodes {
        id
      }
    }
    template {
      templateName
      __typename
    }
    terms(first: 100) {
      nodes {
        id
        __typename
      }
    }
    title
    toPing
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] PostFormat node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  postFormats(first: $first, after: $after) {
    nodes {
      contentNodes(first: 100) {
        nodes {
          id
          __typename
        }
      }
      count
      databaseId
      description
      id
      link
      name
      posts(first: 100) {
        nodes {
          id
        }
      }
      slug
      taxonomy {
        node {
          id
        }
      }
      teamMembers(first: 100) {
        nodes {
          id
        }
      }
      termGroupId
      termTaxonomyId
      uri
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] PostFormat node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  postFormat(id: $id, idType: ID, asPreview: true) {
    contentNodes(first: 100) {
      nodes {
        id
        __typename
      }
    }
    count
    databaseId
    description
    id
    link
    name
    posts(first: 100) {
      nodes {
        id
      }
    }
    slug
    taxonomy {
      node {
        id
      }
    }
    teamMembers(first: 100) {
      nodes {
        id
      }
    }
    termGroupId
    termTaxonomyId
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] PostFormat node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  postFormat(id: $id) {
    contentNodes(first: 100) {
      nodes {
        id
        __typename
      }
    }
    count
    databaseId
    description
    id
    link
    name
    posts(first: 100) {
      nodes {
        id
      }
    }
    slug
    taxonomy {
      node {
        id
      }
    }
    teamMembers(first: 100) {
      nodes {
        id
      }
    }
    termGroupId
    termTaxonomyId
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Project node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  projects(first: $first, after: $after) {
    nodes {
      acfProject {
        fieldGroupName
        image {
          __typename
          id
        }
        projectUrl {
          target
          title
          url
        }
      }
      author {
        node {
          id
        }
      }
      authorDatabaseId
      authorId
      content
      contentType {
        node {
          id
        }
      }
      databaseId
      date
      dateGmt
      desiredSlug
      enclosure
      featuredImage {
        node {
          __typename
          id
        }
      }
      featuredImageDatabaseId
      featuredImageId
      guid
      id
      lastEditedBy {
        node {
          id
        }
      }
      link
      modified
      modifiedGmt
      slug
      status
      template {
        templateName
        __typename
      }
      title
      uri
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Project node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  project(id: $id, idType: ID, asPreview: true) {
    acfProject {
      fieldGroupName
      image {
        __typename
        id
      }
      projectUrl {
        target
        title
        url
      }
    }
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    enclosure
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    lastEditedBy {
      node {
        id
      }
    }
    link
    modified
    modifiedGmt
    slug
    status
    template {
      templateName
      __typename
    }
    title
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Project node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  project(id: $id) {
    acfProject {
      fieldGroupName
      image {
        __typename
        id
      }
      projectUrl {
        target
        title
        url
      }
    }
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    enclosure
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    lastEditedBy {
      node {
        id
      }
    }
    link
    modified
    modifiedGmt
    slug
    status
    template {
      templateName
      __typename
    }
    title
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] RootQuery node node query hasn't changed 1`] = `
"query NON_NODE_QUERY {
  allSettings {
    discussionSettingsDefaultCommentStatus
    discussionSettingsDefaultPingStatus
    generalSettingsDateFormat
    generalSettingsDescription
    generalSettingsEmail
    generalSettingsLanguage
    generalSettingsStartOfWeek
    generalSettingsTimeFormat
    generalSettingsTimezone
    generalSettingsTitle
    generalSettingsUrl
    readingSettingsPostsPerPage
    writingSettingsDefaultCategory
    writingSettingsDefaultPostFormat
    writingSettingsUseSmilies
  }

  discussionSettings {
    defaultCommentStatus
    defaultPingStatus
  }

  generalSettings {
    dateFormat
    description
    email
    language
    startOfWeek
    timeFormat
    timezone
    title
    url
  }

  readingSettings {
    postsPerPage
  }

  wpGatsby {
    arePrettyPermalinksEnabled
    isPreviewFrontendOnline
  }

  writingSettings {
    defaultCategory
    defaultPostFormat
    useSmilies
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Tag node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  tags(first: $first, after: $after) {
    nodes {
      contentNodes(first: 100) {
        nodes {
          id
          __typename
        }
      }
      count
      databaseId
      description
      id
      link
      name
      posts(first: 100) {
        nodes {
          id
        }
      }
      slug
      taxonomy {
        node {
          id
        }
      }
      teamMembers(first: 100) {
        nodes {
          id
        }
      }
      termGroupId
      termTaxonomyId
      uri
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Tag node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  tag(id: $id, idType: ID, asPreview: true) {
    contentNodes(first: 100) {
      nodes {
        id
        __typename
      }
    }
    count
    databaseId
    description
    id
    link
    name
    posts(first: 100) {
      nodes {
        id
      }
    }
    slug
    taxonomy {
      node {
        id
      }
    }
    teamMembers(first: 100) {
      nodes {
        id
      }
    }
    termGroupId
    termTaxonomyId
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Tag node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  tag(id: $id) {
    contentNodes(first: 100) {
      nodes {
        id
        __typename
      }
    }
    count
    databaseId
    description
    id
    link
    name
    posts(first: 100) {
      nodes {
        id
      }
    }
    slug
    taxonomy {
      node {
        id
      }
    }
    teamMembers(first: 100) {
      nodes {
        id
      }
    }
    termGroupId
    termTaxonomyId
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Taxonomy node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  taxonomies(first: $first, after: $after) {
    nodes {
      archivePath
      connectedContentTypes(first: 100) {
        nodes {
          id
        }
      }
      description
      graphqlPluralName
      graphqlSingleName
      hierarchical
      id
      label
      name
      public
      restBase
      restControllerClass
      showCloud
      showInAdminColumn
      showInGraphql
      showInMenu
      showInNavMenus
      showInQuickEdit
      showInRest
      showUi
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Taxonomy node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  taxonomy(id: $id, idType: ID, asPreview: true) {
    archivePath
    connectedContentTypes(first: 100) {
      nodes {
        id
      }
    }
    description
    graphqlPluralName
    graphqlSingleName
    hierarchical
    id
    label
    name
    public
    restBase
    restControllerClass
    showCloud
    showInAdminColumn
    showInGraphql
    showInMenu
    showInNavMenus
    showInQuickEdit
    showInRest
    showUi
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] Taxonomy node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  taxonomy(id: $id) {
    archivePath
    connectedContentTypes(first: 100) {
      nodes {
        id
      }
    }
    description
    graphqlPluralName
    graphqlSingleName
    hierarchical
    id
    label
    name
    public
    restBase
    restControllerClass
    showCloud
    showInAdminColumn
    showInGraphql
    showInMenu
    showInNavMenus
    showInQuickEdit
    showInRest
    showUi
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] TeamMember node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  teamMembers(first: $first, after: $after) {
    nodes {
      acfData {
        fieldGroupName
        name
        portrait {
          __typename
          id
        }
        projects {
          __typename
          ... on Project {
            id
          }
        }
        title
        twitterlink {
          target
          title
          url
        }
        webSite {
          target
          title
          url
        }
      }
      author {
        node {
          id
        }
      }
      authorDatabaseId
      authorId
      categories(first: 100) {
        nodes {
          id
        }
      }
      commentStatus
      comments(first: 100) {
        nodes {
          id
        }
      }
      content
      contentType {
        node {
          id
        }
      }
      databaseId
      date
      dateGmt
      desiredSlug
      enclosure
      excerpt
      featuredImage {
        node {
          __typename
          id
        }
      }
      featuredImageDatabaseId
      featuredImageId
      guid
      id
      isRevision
      lastEditedBy {
        node {
          id
        }
      }
      link
      menuOrder
      modified
      modifiedGmt
      pingStatus
      pinged
      postFormats(first: 100) {
        nodes {
          id
        }
      }
      slug
      status
      tags(first: 100) {
        nodes {
          id
        }
      }
      template {
        templateName
        __typename
      }
      title
      toPing
      uri
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] TeamMember node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  teamMember(id: $id, idType: ID, asPreview: true) {
    acfData {
      fieldGroupName
      name
      portrait {
        __typename
        id
      }
      projects {
        __typename
        ... on Project {
          id
        }
      }
      title
      twitterlink {
        target
        title
        url
      }
      webSite {
        target
        title
        url
      }
    }
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    categories(first: 100) {
      nodes {
        id
      }
    }
    commentStatus
    comments(first: 100) {
      nodes {
        id
      }
    }
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    enclosure
    excerpt
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    isRevision
    lastEditedBy {
      node {
        id
      }
    }
    link
    menuOrder
    modified
    modifiedGmt
    pingStatus
    pinged
    postFormats(first: 100) {
      nodes {
        id
      }
    }
    slug
    status
    tags(first: 100) {
      nodes {
        id
      }
    }
    template {
      templateName
      __typename
    }
    title
    toPing
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] TeamMember node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  teamMember(id: $id) {
    acfData {
      fieldGroupName
      name
      portrait {
        __typename
        id
      }
      projects {
        __typename
        ... on Project {
          id
        }
      }
      title
      twitterlink {
        target
        title
        url
      }
      webSite {
        target
        title
        url
      }
    }
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    categories(first: 100) {
      nodes {
        id
      }
    }
    commentStatus
    comments(first: 100) {
      nodes {
        id
      }
    }
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    enclosure
    excerpt
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    isRevision
    lastEditedBy {
      node {
        id
      }
    }
    link
    menuOrder
    modified
    modifiedGmt
    pingStatus
    pinged
    postFormats(first: 100) {
      nodes {
        id
      }
    }
    slug
    status
    tags(first: 100) {
      nodes {
        id
      }
    }
    template {
      templateName
      __typename
    }
    title
    toPing
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] TranslationFilterTest node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  translationFilterTests(first: $first, after: $after) {
    nodes {
      author {
        node {
          id
        }
      }
      authorDatabaseId
      authorId
      content
      contentType {
        node {
          id
        }
      }
      databaseId
      date
      dateGmt
      desiredSlug
      enclosure
      featuredImage {
        node {
          __typename
          id
        }
      }
      featuredImageDatabaseId
      featuredImageId
      guid
      id
      lastEditedBy {
        node {
          id
        }
      }
      link
      modified
      modifiedGmt
      slug
      status
      template {
        templateName
        __typename
      }
      title
      uri
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] TranslationFilterTest node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  translationFilterTest(id: $id, idType: ID, asPreview: true) {
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    enclosure
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    lastEditedBy {
      node {
        id
      }
    }
    link
    modified
    modifiedGmt
    slug
    status
    template {
      templateName
      __typename
    }
    title
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] TranslationFilterTest node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  translationFilterTest(id: $id) {
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    enclosure
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    lastEditedBy {
      node {
        id
      }
    }
    link
    modified
    modifiedGmt
    slug
    status
    template {
      templateName
      __typename
    }
    title
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] TypeLimit0Test node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  typeLimit0Tests(first: $first, after: $after) {
    nodes {
      author {
        node {
          id
        }
      }
      authorDatabaseId
      authorId
      content
      contentType {
        node {
          id
        }
      }
      databaseId
      date
      dateGmt
      desiredSlug
      enclosure
      featuredImage {
        node {
          __typename
          id
        }
      }
      featuredImageDatabaseId
      featuredImageId
      guid
      id
      lastEditedBy {
        node {
          id
        }
      }
      link
      modified
      modifiedGmt
      slug
      status
      template {
        templateName
        __typename
      }
      title
      uri
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] TypeLimit0Test node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  typeLimit0Test(id: $id, idType: ID, asPreview: true) {
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    enclosure
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    lastEditedBy {
      node {
        id
      }
    }
    link
    modified
    modifiedGmt
    slug
    status
    template {
      templateName
      __typename
    }
    title
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] TypeLimit0Test node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  typeLimit0Test(id: $id) {
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    enclosure
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    lastEditedBy {
      node {
        id
      }
    }
    link
    modified
    modifiedGmt
    slug
    status
    template {
      templateName
      __typename
    }
    title
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] TypeLimitTest node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  typeLimitTests(first: $first, after: $after) {
    nodes {
      author {
        node {
          id
        }
      }
      authorDatabaseId
      authorId
      content
      contentType {
        node {
          id
        }
      }
      databaseId
      date
      dateGmt
      desiredSlug
      enclosure
      featuredImage {
        node {
          __typename
          id
        }
      }
      featuredImageDatabaseId
      featuredImageId
      guid
      id
      lastEditedBy {
        node {
          id
        }
      }
      link
      modified
      modifiedGmt
      slug
      status
      template {
        templateName
        __typename
      }
      title
      uri
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] TypeLimitTest node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  typeLimitTest(id: $id, idType: ID, asPreview: true) {
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    enclosure
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    lastEditedBy {
      node {
        id
      }
    }
    link
    modified
    modifiedGmt
    slug
    status
    template {
      templateName
      __typename
    }
    title
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] TypeLimitTest node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  typeLimitTest(id: $id) {
    author {
      node {
        id
      }
    }
    authorDatabaseId
    authorId
    content
    contentType {
      node {
        id
      }
    }
    databaseId
    date
    dateGmt
    desiredSlug
    enclosure
    featuredImage {
      node {
        __typename
        id
      }
    }
    featuredImageDatabaseId
    featuredImageId
    guid
    id
    lastEditedBy {
      node {
        id
      }
    }
    link
    modified
    modifiedGmt
    slug
    status
    template {
      templateName
      __typename
    }
    title
    uri
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] User node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  users(first: $first, after: $after) {
    nodes {
      avatar {
        default
        extraAttr
        forceDefault
        foundAvatar
        height
        rating
        scheme
        size
        url
        width
      }
      capabilities
      comments(first: 100) {
        nodes {
          id
        }
      }
      databaseId
      description
      firstName
      id
      lastName
      locale
      name
      nicename
      nickname
      pages(first: 100) {
        nodes {
          id
        }
      }
      posts(first: 100) {
        nodes {
          id
        }
      }
      projects(first: 100) {
        nodes {
          id
        }
      }
      roles(first: 100) {
        nodes {
          id
        }
      }
      slug
      teamMembers(first: 100) {
        nodes {
          id
        }
      }
      translationFilterTests(first: 100) {
        nodes {
          id
        }
      }
      typeLimit0Tests(first: 100) {
        nodes {
          id
        }
      }
      typeLimitTests(first: 100) {
        nodes {
          id
        }
      }
      uri
      url
      username
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] User node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  user(id: $id, idType: ID, asPreview: true) {
    avatar {
      default
      extraAttr
      forceDefault
      foundAvatar
      height
      rating
      scheme
      size
      url
      width
    }
    capabilities
    comments(first: 100) {
      nodes {
        id
      }
    }
    databaseId
    description
    firstName
    id
    lastName
    locale
    name
    nicename
    nickname
    pages(first: 100) {
      nodes {
        id
      }
    }
    posts(first: 100) {
      nodes {
        id
      }
    }
    projects(first: 100) {
      nodes {
        id
      }
    }
    roles(first: 100) {
      nodes {
        id
      }
    }
    slug
    teamMembers(first: 100) {
      nodes {
        id
      }
    }
    translationFilterTests(first: 100) {
      nodes {
        id
      }
    }
    typeLimit0Tests(first: 100) {
      nodes {
        id
      }
    }
    typeLimitTests(first: 100) {
      nodes {
        id
      }
    }
    uri
    url
    username
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] User node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  user(id: $id) {
    avatar {
      default
      extraAttr
      forceDefault
      foundAvatar
      height
      rating
      scheme
      size
      url
      width
    }
    capabilities
    comments(first: 100) {
      nodes {
        id
      }
    }
    databaseId
    description
    firstName
    id
    lastName
    locale
    name
    nicename
    nickname
    pages(first: 100) {
      nodes {
        id
      }
    }
    posts(first: 100) {
      nodes {
        id
      }
    }
    projects(first: 100) {
      nodes {
        id
      }
    }
    roles(first: 100) {
      nodes {
        id
      }
    }
    slug
    teamMembers(first: 100) {
      nodes {
        id
      }
    }
    translationFilterTests(first: 100) {
      nodes {
        id
      }
    }
    typeLimit0Tests(first: 100) {
      nodes {
        id
      }
    }
    typeLimitTests(first: 100) {
      nodes {
        id
      }
    }
    uri
    url
    username
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] UserRole node list query hasn't changed 1`] = `
"query NODE_LIST_QUERY($first: Int!, $after: String) {
  userRoles(first: $first, after: $after) {
    nodes {
      capabilities
      displayName
      id
      name
      __typename
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] UserRole node preview query hasn't changed 1`] = `
"query PREVIEW_QUERY($id: ID!) {
  userRole(id: $id, idType: ID, asPreview: true) {
    capabilities
    displayName
    id
    name
    __typename
  }
}
"
`;

exports[`[gatsby-source-wordpress] query generation [gatsby-source-wordpress] UserRole node single query hasn't changed 1`] = `
"query SINGLE_CONTENT_QUERY($id: ID!) {
  userRole(id: $id) {
    capabilities
    displayName
    id
    name
    __typename
  }
}
"
`;
